--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -2,239 +2,259 @@
 
 
 /////////////////////////////////////////////////////////
-//			                Base                       //
+//                         Base                        //
 /////////////////////////////////////////////////////////
 
 a
-	text-decoration initial
+    text-decoration initial
 
 body
-	centeredPad()
+    centeredPad()
 
-	> header
-		font-size 2em
-		+ nav
-			> ul
-				display block
-				> li
-					display inline-block
-					min-width (main-width / 10)
-					height top-nav-height
-					vertical-align middle
-					line-height top-nav-height
-					text-align center
-					margin (main-width / 100)
+    > header
+        font-size 2em
+        + nav
+            > ul
+                display block
+                > li
+                    display inline-block
+                    min-width (main-width / 10)
+                    height top-nav-height
+                    vertical-align middle
+                    line-height top-nav-height
+                    text-align center
+                    margin (main-width / 100)
 
-					
+                    
 
-	header
-		margin (elt-margin/2) 0
-		padding (elt-margin/2) 0px
-		
-	> section
-		> article
-			> aside:only-of-type
-				float left
-				width 20%
-				margin-left -25%
-				font-size 12px
-				line-height 1.8
-			margin 0 0 20px 0px
-			display inline-table
-			
-		> article[data-aside="true"]
-			margin 0 0 20px 20%
+    header
+        margin (elt-margin/2) 0
+        padding (elt-margin/2) 0px
+        
+    > section
+        > article
+            > aside:only-of-type
+                float left
+                width 20%
+                margin-left -25%
+                font-size 12px
+                line-height 1.8
+            margin 0 0 20px 0px
+            display inline-table
+            
+        > article[data-aside="true"]
+            margin 0 0 20px 20%
 
-	> footer
-		display block
-		
+    > footer
+        display block
+        
 
 /////////////////////////////////////////////////////////
-//			            Sections(s)                    //
+//                    Sections(s)                    //
 /////////////////////////////////////////////////////////
 
 body > section[data-display="monobox"]
-	display block
-	text-align center
-	width 50%
-	margin auto
-	margin-top 6*elt-margin
-	padding 20px
+    display block
+    text-align center
+    width 50%
+    margin auto
+    margin-top 6*elt-margin
+    padding 20px
 
 
 /////////////////////////////////////////////////////////
-//			         Global display(s)                //
+//                   Global display(s)                 //
 /////////////////////////////////////////////////////////
 
 *[data-width="full"]
-	width 98%
-	padding-left 0
-	padding-right 0
-	margin-left 1%
-	margin-right 1%
+    width 98%
+    padding-left 0
+    padding-right 0
+    margin-left 1%
+    margin-right 1%
 
 *[data-width="half"]
-	width 48%
-	padding-left 0
-	padding-right 0
-	margin-left 1%
-	margin-right 1%
+    width 48%
+    padding-left 0
+    padding-right 0
+    margin-left 1%
+    margin-right 1%
 
 *[data-width="tiers"]
-	width 31%
-	padding-left 0
-	padding-right 0
-	margin-left 1%
-	margin-right 1%
+    width 31%
+    padding-left 0
+    padding-right 0
+    margin-left 1%
+    margin-right 1%
 
 *[data-width="quarter"]
-	width 23%
-	padding-left 0
-	padding-right 0
-	margin-left 1%
-	margin-right 1%
+    width 23%
+    padding-left 0
+    padding-right 0
+    margin-left 1%
+    margin-right 1%
 
 /////////////////////////////////////////////////////////
-//			              Buttons                      //
+//              Buttons                      //
 /////////////////////////////////////////////////////////
 
 button[data-button="push"]
-	padding 12px 6px
-	font-size 1em
-	line-height 0
+    padding 12px 6px
+    font-size 1em
+    line-height 0
 
 button,
 a[data-type="button"]
-	display inline-block
-	height 24px
-	line-height 24px
-	font-size 11px
-	padding 0 7px 0 7px
-	margin 0 7px 0 0
-	text-align center
-	//float left
-	cursor pointer
-	text-decoration none
-	-webkit-user-select none
-	-khtml-user-select none
-	-moz-user-select none
-	-ms-user-select none
-	user-select none
-	*zoom 1
-	*margin-left .3em
+    display inline-block
+    height 24px
+    line-height 24px
+    font-size 11px
+    padding 0 7px 0 7px
+    margin 0 7px 0 0
+    text-align center
+    //float left
+    cursor pointer
+    text-decoration none
+    -webkit-user-select none
+    -khtml-user-select none
+    -moz-user-select none
+    -ms-user-select none
+    user-select none
+    *zoom 1
+    *margin-left .3em
 
-	&:before,
-	&:after 
-		display tablecontent ""
-	&:after 
-		clear both
-	&:first-child 
-		*margin-left 0
+    &:before,
+    &:after 
+        display tablecontent ""
+    &:after 
+        clear both
+    &:first-child 
+        *margin-left 0
 
-	&[data-size="small"]
-		height 18px
-		line-height 18px
-		font-size 9px
+    &[data-size="small"]
+        height 18px
+        line-height 18px
+        font-size 9px
 
-	&[data-size="big"]
-		height 32px
-		line-height 32px
-		font-size 16px
-	
-	&[data-size="huge"]
-		height 48px
-		line-height 48px
-		font-size 22px
+    &[data-size="big"]
+        height 32px
+        line-height 32px
+        font-size 16px
+    
+    &[data-size="huge"]
+        height 48px
+        line-height 48px
+        font-size 22px
 
 
 /////////////////////////////////////////////////////////
-//			              Fields                       //
+//                      Fields                       //
 /////////////////////////////////////////////////////////
 
 form
-	select,
-	textarea,
-	input[type="text"],
-	input[type="password"],
-	input[type="datetime"],
-	input[type="datetime-local"],
-	input[type="date"],
-	input[type="month"],
-	input[type="time"],
-	input[type="week"],
-	input[type="number"],
-	input[type="email"],
-	input[type="url"],
-	input[type="search"],
-	input[type="tel"],
-	input[type="color"]
-		width base_width
-		height base_height
-		padding input_padding_top input_padding_right
-		margin input_margin_top input_margin_right
-	select
-		height select_height
-		min-width select_width
-	margin-bottom 10px
-		
+    select,
+    textarea,
+    input[type="text"],
+    input[type="password"],
+    input[type="datetime"],
+    input[type="datetime-local"],
+    input[type="date"],
+    input[type="month"],
+    input[type="time"],
+    input[type="week"],
+    input[type="number"],
+    input[type="email"],
+    input[type="url"],
+    input[type="search"],
+    input[type="tel"],
+    input[type="color"]
+        width base_width
+        height base_height
+        padding input_padding_top input_padding_right
+        margin input_margin_top input_margin_right
+    select
+        height select_height
+        min-width select_width
+    margin-bottom 10px
+        
+form
+    label ~ input,
+    label ~ select 
+        float right
+        clear right
+        display block
+    label > input,
+    label > select
+        margin-left input_margin_right*4
+    label
+        float left
+        clear both
+        display block
+        vertical-align middle
+        line-height base_height + 2*input_border_width
+        padding input_padding_top input_padding_right
+        margin input_margin_top 6*input_margin_right input_margin_top input_margin_right
+        height base_height + 2*input_border_width
+
+
 form[data-align="horizontal"]
-	input,
-	select
-		display inline-block
-	label
-		margin-left 10px
-		
+    input,
+    select
+        display inline-block
+    label
+        margin-left 10px
+        
 form[data-align="vertical"]
-	input,
-	select,
-	label
-		display block
-	input + label,
-	select + label
-		margin-top 10px
+    input,
+    select,
+    label
+        display block
+    input + label,
+    select + label
+        margin-top 10px
 
 form[data-align="mixed"]
-	label ~ input,
-	label ~ select 
-		float right
-		clear right
-		display block
-	label > input,
-	label > select
-		margin-left input_margin_right*4
-	label
-		float left
-		clear both
-		display block
-		vertical-align middle
-		line-height base_height + 2*input_border_width
-		padding input_padding_top input_padding_right
-		margin input_margin_top 6*input_margin_right input_margin_top input_margin_right
-		height base_height + 2*input_border_width
+    label ~ input,
+    label ~ select 
+        float right
+        clear right
+        display block
+    label > input,
+    label > select
+        margin-left input_margin_right*4
+    label
+        float left
+        clear both
+        display block
+        vertical-align middle
+        line-height base_height + 2*input_border_width
+        padding input_padding_top input_padding_right
+        margin input_margin_top 6*input_margin_right input_margin_top input_margin_right
+        height base_height + 2*input_border_width
 
 form[data-align="labelled"]
-	label ~ input,
-	label ~ select 
-		clear right
-		display block
-	label > input,
-	label > select
-		margin-left input_margin_right*4
-	label
-		float left
-		clear both
-		display block
-		vertical-align middle
-		line-height base_height + 2*input_border_width
-		padding input_padding_top input_padding_right
-		margin input_margin_top input_margin_right
-		height base_height + 2*input_border_width
-		min-width 2*base_width
-	input + select,
-	select + input,
-	select + select,
-	input + input
-		clear right
-		display block
-		float right
-		min-width 2*base_width		
+    label ~ input,
+    label ~ select 
+        clear right
+        display block
+    label > input,
+    label > select
+        margin-left input_margin_right*4
+    label
+        float left
+        clear both
+        display block
+        vertical-align middle
+        line-height base_height + 2*input_border_width
+        padding input_padding_top input_padding_right
+        margin input_margin_top input_margin_right
+        height base_height + 2*input_border_width
+        min-width 2*base_width
+    input + select,
+    select + input,
+    select + select,
+    input + input
+        clear right
+        display block
+        float right
+        min-width 2*base_width        
