Adding new styles, and a lighter font color for buttons

--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -32,6 +32,9 @@ body
         padding (elt-margin/2) 0px
         
     > section
+        > header
+            font-size 1.2em
+            font-weight bold
         > article
             > aside:only-of-type
                 float left
