Adding moment.js javascript library, adding AwesomeWebFont to provide icons, fixing some bugs in moon.js and position.styl

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -117,3 +117,16 @@ form[data-type="smart-input"]
         box-shadow(inset 0 1px 3px rgba(0,0,0,0)\,0 0 8px rgba(0,0,0,0))
     input:hover
         border-bottom input_border_width solid primary_color
+
+/////////////////////////////////////////////////////////
+//                      Articles                       //
+/////////////////////////////////////////////////////////
+
+section[role="article"]
+    padding-bottom 30px
+    border-bottom 2px solid primary_color
+
+*[role="separator"]
+    font-size 1em
+    color transparize(secondary_color,0.3)
+    text-align center
