Adding an ajax-loader help to JsMoon (JsMoon.load) and fix a bug in JsMoon.side (not fixed yet in push \!). Adding invert color in color.styl

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -46,8 +46,8 @@ button[data-button="push"]
         border-right 1px solid btn_rig_bdr
         box-shadow(inset -1px -1px 5px 0px btn_shadow_prs)
         
-button,
-a[data-type="button"]
+button[data-button="modern"],
+a[data-button="modern"]
     font-weight bold
     color btn_reg_text_clr
     text-shadow 0 1px 0 btn_reg_text_shadow
@@ -98,7 +98,7 @@ a[data-type="button"]
         box-shadow none
         color transparize(background_color,0.6)
 
-*[data-button="simple-inv"]
+*[data-button="simple-lite"]
     font-weight bold
     color primary_color
     text-shadow none
