--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -59,6 +59,7 @@ body
     
     > section[data-space="left"]
         margin-left 20%
+        width 80%
 
     > aside[data-spacer="left"]
         position fixed
@@ -97,43 +98,47 @@ body > section[data-display="monobox"]
 //                   Global display(s)                 //
 /////////////////////////////////////////////////////////
 
+*[data-width]
+    display inline-block
+    vertical-align: top
+
 *[data-width="full"]
-    width 98%
+    width 97%
     padding-left 0
     padding-right 0
     margin-left 1%
     margin-right 1%
 
 *[data-width="half"]
-    width 48%
+    width 47%
     padding-left 0
     padding-right 0
     margin-left 1%
     margin-right 1%
 
 *[data-width="tiers"]
-    width 31%
+    width 30%
     padding-left 0
     padding-right 0
     margin-left 1%
     margin-right 1%
 
 *[data-width="two-tiers"]
-    width 64%
+    width 63%
     padding-left 0
     padding-right 0
     margin-left 1%
     margin-right 1%
 
 *[data-width="quarter"]
-    width 23%
+    width 22%
     padding-left 0
     padding-right 0
     margin-left 1%
     margin-right 1%
 
 *[data-width="three-quarter"]
-    width 73%
+    width 72%
     padding-left 0
     padding-right 0
     margin-left 1%
@@ -156,6 +161,7 @@ button[data-width="input"]
 
 *[data-button="simple"],
 *[data-button="simple-inv"]
+    font-weight bold
     padding 6px
     margin 4px
     display block
@@ -326,6 +332,57 @@ form[data-align="labelled"]
     min-width 2*base_width        
 
 
+progress,
+*[data-type="progress"] 
+    display: inline-block
+            -moz-box-sizing: border-box
+            box-sizing: border-box
+    width: 100%
+    height: 20px
+    padding: 0px
+
+
+progress[value='100'] span,
+*[data-type="progress"] span
+    display: inline-block
+    width: 100%
+    height: 20px
+
+progress[value^='9']:not([value^='9.']):not([value='9']) span,
+*[data-type="progress"][value^='9']:not([value^='9.']):not([value='9']) span
+    width: 95%
+
+progress[value^='8']:not([value^='8.']):not([value='8']) span,
+*[data-type="progress"][value^='8']:not([value^='8.']):not([value='8']) span
+    width: 85%
+
+progress[value^='7']:not([value^='7.']):not([value='7']) span,
+*[data-type="progress"][value^='7':not([value^='7.']):not([value='7']) span
+    width: 75%
+
+progress[value^='6']:not([value^='6.']):not([value='6']) span,
+*[data-type="progress"][value^='6']:not([value^='6.']):not([value='6']) span
+    width: 65%
+
+progress[value^='5']:not([value^='5.']):not([value='5']) span,
+*[data-type="progress"][value^='5']:not([value^='5.']):not([value='5']) span
+    width: 55%
+
+progress[value^='4']:not([value^='4.']):not([value='4']) span,
+*[data-type="progress"][value^='4']:not([value^='4.']):not([value='4']) span
+    width: 45%
+
+progress[value^='3']:not([value^='3.']):not([value='3']) span,
+*[data-type="progress"][value^='3']:not([value^='3.']):not([value='3']) span
+    width: 35%
+
+progress[value^='2']:not([value^='2.']):not([value='2']) span,
+*[data-type="progress"][value^='2']:not([value^='2.']):not([value='2']) span
+    width: 25%
+
+progress[value^='1']:not([value^='1.']):not([value='1']):not([value='100']) span,
+*[data-type="progress"][value^='1']:not([value='1']):not([value='100']) span
+    width: 15%
 
 /////////////////////////////////////////////////////////
 //                       Figures                       //
