--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -388,8 +388,21 @@ progress[value^='1']:not([value^='1.']):not([value='1']):not([value='100']) span
 //                       Figures                       //
 /////////////////////////////////////////////////////////
 
-figure > img 
+figure 
+    
+    display inline-block
+    > img 
+        padding 10px
+        vendor('border-radius',2px)
+        margin 0px
+        border 1px solid rgba(0,0,0,0.1)
+
+figure[data-size="small"] > img
+    padding 5px
+    max-height 45px
+    width auto
+    
+figure[data-size="medium"] > img
     padding 10px
-    vendor('border-radius',2px)
-    margin 0px
-    border 1px solid rgba(0,0,0,0.1)
+    max-height 100px
+    width auto
