image lightbox integration, new styles and new css

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -235,5 +235,15 @@ section[role="article"]
 header
     h1
         small
+            color transparize(secondary_color,0.4)
+    h2
+        small
             color transparize(secondary_color,0.3)
+    h3
+        small
+            color transparize(secondary_color,0.255555)
+
+*[data-style="light"]
+    color transparize(secondary_color,0.255555)
+    
 
