--- a/styles/jsMoon.css
+++ b/styles/jsMoon.css
@@ -27,6 +27,7 @@
 {
     position : relative;
     left : -100px;
+    opacity : 0;
     color : rgba(0,0,0,0.0);
     background-color : rgba(0,0,0,0.0);
     border-color : transparent !important;
@@ -61,6 +62,7 @@
 {
     position : relative;
     right : -100px;
+    opacity : 0;
     color : rgba(0,0,0,0.0);
     background-color : rgba(0,0,0,0.0);
     border-color : transparent !important;
@@ -70,6 +72,7 @@
 {
     color : rgba(0,0,0,0.0);
     background-color : rgba(0,0,0,0.0);
+    opacity : 0;
     border-color : transparent !important;
 }
 
