--- a/twig/base.twig
+++ b/twig/base.twig
@@ -17,6 +17,7 @@
 
 			{% endblock %}
 
+        <section data-role="container">
 			{% block base %}
 
 		<header>
@@ -42,10 +43,10 @@
 			{% endblock %}
 		</nav>
 		
-
 		{% block main_container %}
 		{% endblock %}
 
 			{% endblock %}
+        </section>
 
 {% include 'footer.twig' %}
