--- a/styles/stylus/moon/helpers.styl
+++ b/styles/stylus/moon/helpers.styl
@@ -21,7 +21,7 @@
     color #798029
 
 .moon-errors
-    color rgba(165,56,22,0.6)
-    background-color rgba(255,133,0,0.28)
+    color rgb(165,56,22)
+    background-color #DDA783
 
 
