--- a/styles/stylus/style.styl
+++ b/styles/stylus/style.styl
@@ -1,9 +1,17 @@
-@import "normalize.min.css"
-@import "initializer.css"
-
 @import 'moon/base'
 
 
 body 
-	font-family 'Oxygen', sans-serif 
-	color rgba(0, 0, 0, 0.6)
+    font-family 'Oxygen', sans-serif 
+    color rgba(0, 0, 0, 0.6)
+
+    .login-mono-box
+        margin-top 200px
+        h1 
+            font-size 4em
+
+
+
+form
+    select
+        background-color #FFF
