--- a/twig/footer.twig
+++ b/twig/footer.twig
@@ -21,5 +21,9 @@
 		{# Shows the debug lines #}
 		{{ webdata.debug }}
 	{% endblock %}
+
+    {% block userScripts %}
+
+    {% endblock %}
 	</body>
 </html>
