--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -3,6 +3,7 @@
 @import 'colors'
 @import 'responsive'
 @import 'helpers'
+@import 'transitions'
 
 /////////////////////////////////////////////////////////
 //                            Base                       //
@@ -74,7 +75,8 @@ a[data-button="modern"]
         box-shadow none
         color transparize(btn_reg_text_clr,0.6)
     
-*[data-button="simple"]
+*[data-button="simple"],
+button
     color background_color
     text-shadow none
     border solid 1px transparent
@@ -220,30 +222,33 @@ form[data-type="smart-input"]
     
     &[data-style="white"]
         old_p = rgba(255,255,255,1) 
-        input
+        input,
+        textarea
             background-color transparize(old_p,0.0)
             color transparize(old_p,0.8);
             font-size 1.2rem
-            width 100%
             border input_border_width dashed transparent
             border-bottom input_border_width dashed transparize(old_p,0.2)
             border-radius(0px)
-            margin-top 20px
             box-shadow(inset 0 1px 3px rgba(0,0,0,0)\,0 0 8px rgba(0,0,0,0))
+        textarea::-webkit-input-placeholder,
         input::-webkit-input-placeholder
             color transparize(old_p,0.5)
+        textarea::-ms-input-placeholder,
         input::-ms-input-placeholder
             color transparize(old_p,0.5)
+        textarea:-moz-placeholder,
         input:-moz-placeholder
             color transparize(old_p,0.5)
+        textarea::-moz-placeholder,
         input::-moz-placeholder
             color transparize(old_p,0.5)
+        textarea:hover,
         input:hover
             border-bottom input_border_width dashed transparize(old_p,0.5)
 
         *[type="submit"]
             margin auto
-            margin-top 10px
             padding 0
             height 30px
         select:focus,
@@ -256,32 +261,41 @@ form[data-type="smart-input"]
             border input_border_width dashed transparent
             background-color transparize(old_p,0.1)
 
-    input
+    input,
+    *[type="submit"],
+    textarea
         background-color transparize(old_p,0.0)
         color transparize(old_p,0.8);
         font-size 1.2rem
-        width 100%
         border input_border_width dashed transparent
         border-bottom input_border_width dashed transparize(old_p,0.2)
         border-radius(0px)
-        margin-top 20px
         box-shadow(inset 0 1px 3px rgba(0,0,0,0)\,0 0 8px rgba(0,0,0,0))
+    textarea::-webkit-input-placeholder,
     input::-webkit-input-placeholder
         color transparize(old_p,0.5)
+    textarea::-ms-input-placeholder,
     input::-ms-input-placeholder
         color transparize(old_p,0.5)
+    textarea:-moz-placeholder,
     input:-moz-placeholder
         color transparize(old_p,0.5)
+    textarea::-moz-placeholder,
     input::-moz-placeholder
         color transparize(old_p,0.5)
+    textarea:hover,
     input:hover
         border-bottom input_border_width dashed transparize(old_p,0.5)
 
     *[type="submit"]
-        margin auto
-        margin-top 10px
-        padding 0
-        height 30px
+        padding 4px 0px
+        background-color transparize(old_p,0.9)
+        color monochrome(old_p)
+        font-size 1.2rem
+        height auto
+        float none
+        border input_border_width dashed transparent
+        
     select:focus,
     textarea:focus,
     input:focus,
