--- a/styles/stylus/moon/helpers.styl
+++ b/styles/stylus/moon/helpers.styl
@@ -1,4 +1,4 @@
-
+@import variables
 
 *[data-role="notification"] > *[data-action="close"]
     display inline-block
@@ -23,5 +23,18 @@
 .moon-errors
     color rgb(165,56,22)
     background-color #DDA783
+
+/** ----------- Shame.styl -------------- */
+
+/** ------------ Selects ---------------- */
+.minict_wrapper
+    width base_width + 4*(input_margin_top)
+    padding input_padding_top input_padding_right
+    margin input_margin_top input_margin_right
+    
+    &:after
+        line-height 2.8rem
+
+
 
 
