Adding ajax forms on jsMoon, adding loading button styles, adding propagationDisabler on [click/change] ajax trigger events

--- a/styles/stylus/moon/transitions.styl
+++ b/styles/stylus/moon/transitions.styl
@@ -105,6 +105,22 @@ input[type="radio"]:checked + .radio span:before {
     vendor(animation,pulse .25s)
 }
 
+button.loading,
+input.loading
+    vendor(transition, 1s ease)
+    padding-right 20px
+
+    i.icon-spin
+        margin-left 30px
+
+button.success,
+input.success
+    vendor(transition, 1s ease)
+    padding-right 20px
+
+    i
+        margin-left 30px
+
 .minict_wrapper
     border none
 
