Adding light styles rules and fixing the path of fonts in font-awesome stylesheet

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -338,4 +338,9 @@ header
 *[data-style="light"]
     color transparize(secondary_color,0.255555)
     
+*[data-style="light-less"]
+    color transparize(secondary_color,0.455555)
 
+*[data-style="light-more"]
+    color transparize(secondary_color,0.155555)
+       
